organizacion containers y secciones, navbar linked
css organizado y limpiado

--- a/index.html
+++ b/index.html
@@ -26,208 +26,197 @@
 
 <body>
   <!-- CONTAINER 1 -->
-  <div class="containter-fluid">
-    <!-- BARRA DE NAVEGACIÓN -->
+
+  <section id="cabeza" class="containter-fluid">
+
     <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
+      <!-- BARRA DE NAVEGACIÓN -->
 
       <a class="navbar-brand" href="">TRES INCENDIOS RECORDS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="">Bandas y Artistas</a>
+            <a class="nav-link" href="#bands">Bandas y Artistas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Nosotros</a>
+            <a class="nav-link" href="#nosotros">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Conectemos</a>
+            <a class="nav-link" href="#contact-me">Conectemos</a>
           </li>
         </ul>
-
-
       </div>
+
     </nav>
-
-
     <!-- TÍTULO -->
 
-
-
-    <div class="topcontainer row">
+    <div class=" container row">
       <div class="description col-lg-6 col-md-12">
         <h1>Producción y difusión de bandas alternativas emergentes.</h1>
         <br>
-
         <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
-
       </div>
+
       <div class="col-lg-6" style="padding:0;">
         <img class="matchbox" src="images/MANOTRES.png" alt="cajadefosfores">
       </div>
     </div>
-  </div>
+
+  </section>
 
   <!-- BANDAS Y ARTISTAS -->
 
+  <section id="bands" class="container-fluid">
 
-  <div class="middle-container">
-    <div class="bands">
-      <img class="fosoforospng" src="images/FOSFOROTRES.png" alt="fosofores">
-      <h2>BANDAS Y ARTISTAS</h2>
-      <br>
-      <p>
-        <table>
-          <tr>
-            <td>
-              <table class="tabla1" cellspacing="14.1">
+    <img class="fosoforospng" src="images/FOSFOROTRES.png" alt="fosofores">
 
-                <tr>
-                  <td>
-                    <strong>Audiocancer</strong>
-                  </td>
-                  <td><a href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
-                      T H A L A S S I C</a></td>
-                </tr>
-                <tr>
-                  <td>
-                    <strong>The Cluster</strong>
-                  </td>
-                  <td><a href="https://tres-incendios-temporales.bandcamp.com/track/again">
-                      Again</a></td>
-                </tr>
-                <tr>
-                  <td>
-                    <strong>Dimitri Novikov</strong>
-                  </td>
-                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">Siglo XX - 20 век (Lost recordings)</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <strong>goldenrod</strong>
-                  </td>
-                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/track/blinded">Blinded</a>
-                  </td>
-                </tr>
-              </table>
-            </td>
-            <td>
-              <table cellspacing="7">
-                <tr>
-                  <td>
-                    <strong>SADKÓ</strong>
-                  </td>
-                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">Transiberiano (Транссибирский)</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <strong>Secretismo</strong>
-                  </td>
-                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/esencial">Esencial</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <strong>Sombras</strong>
-                  </td>
-                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Sombras S/T</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <strong>Trivmvirs</strong>
-                  </td>
-                  <td> <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Singles Vol. 1</a>
-                  </td>
-                </tr>
-              </table>
+    <h2>BANDAS Y ARTISTAS</h2>
 
-            </td>
-          </tr>
-
-        </table>
-      </p>
-      <br>
-
-      <hr>
+    <table>
+      <tr>
+        <td>
+          <table cellspacing="90">
+            <tr>
+              <td>
+                <strong>Audiocancer</strong>
+              </td>
+              <td>
+                <a href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
+                  T H A L A S S I C</a></td>
+            </tr>
+            <tr>
+              <td>
+                <strong>The Cluster</strong>
+              </td>
+              <td>
+                <a href="https://tres-incendios-temporales.bandcamp.com/track/again">
+                  Again</a></td>
+            </tr>
+            <tr>
+              <td>
+                <strong>Dimitri Novikov</strong>
+              </td>
+              <td>
+                <a href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">Siglo XX - 20 век (Lost recordings)</a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <strong>goldenrod</strong>
+              </td>
+              <td>
+                <a href="https://tres-incendios-temporales.bandcamp.com/track/blinded">Blinded</a>
+              </td>
+            </tr>
+          </table>
+        </td>
 
 
-      <!-- NOSOTROS -->
+        <td>
+          <table cellspacing="7">
+            <tr>
+              <td>
+                <strong>SADKÓ</strong>
+              </td>
+              <td>
+                <a href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">Transiberiano (Транссибирский)</a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <strong>Secretismo</strong>
+              </td>
+              <td>
+                <a href="https://tres-incendios-temporales.bandcamp.com/album/esencial">Esencial</a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <strong>Sombras</strong>
+              </td>
+              <td>
+                <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Sombras S/T</a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <strong>Trivmvirs</strong>
+              </td>
+              <td>
+                <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Singles Vol. 1</a>
+              </td>
+            </tr>
+          </table>
 
+        </td>
+      </tr>
 
-      <div class="nosotros">
-        <h2>NOSOTROS</h2>
-        <div class="us-row">
-          <div class="bio">
-            <img class="bioimg" src="https://image.flaticon.com/icons/svg/1963/1963720.svg" alt="mxr">
-            <h3>La historia</h3>
-            <p>En 2017 Niebla Páramo y Desasociado formaron <bold>T I R</bold> como primera plataforma para difundir sus proyectos musicales:
-              <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
-              luego.</p>
-            <p>
-              Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
-              en la escena Underground bogotana desde entonces con el ánimo de apoyar las bandas locales y las
-              marcas de diseño independientes de la ciudad.
-            </p>
-            <br>
-            <br>
-            <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
-            <h3>La misión</h3>
-            <p>III Incendios como plataforma creativa multidimensional</p>
-          </div>
-        </div>
+    </table>
+<hr>
+  </section>
 
+  <!-- NOSOTROS -->
 
-        <br>
-        <hr>
+  <section id="nosotros">
 
-        <!-- CONTACTO -->
+    <h2>NOSOTROS</h2>
 
-
-        <div class="contact-me">
-          <br>
-          <h2>CONECTEMOS</h2>
-
-
-          <button type="button" class=" btn-outline-light btn btn-link btn-sm"><a href="info.html" class="INFO">OUR INFO</a></button>
-
-
-          <br>
-          <br>
-        </div>
-
-
-
-      </div>
-    </div>
-
-
-    <!-- REDES -->
-
-
-    <div class="bottom-container">
-
-      <br>
+    <div class="us-row">
       <div>
-        <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
-        <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
-        <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
-        <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
-        <p class="copyriht">© 2020 Tres Incendios Records</p>
+        <img class="bioimg" src="https://image.flaticon.com/icons/svg/1963/1963720.svg" alt="mxr">
+        <h3>La historia</h3>
+        <p>En 2017 Niebla Páramo y Desasociado formaron <bold>T I R</bold> como primera plataforma para difundir sus proyectos musicales:
+          <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
+          luego.</p>
+        <p>
+          Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
+          en la escena Underground bogotana desde entonces, con el ánimo de apoyar las bandas locales y las
+          marcas de diseño independientes de la ciudad.
+        </p>
 
+        <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
+        <h3>La misión</h3>
+        <p>III Incendios como plataforma creativa multidimensional</p>
       </div>
+    </div>
+
+  </section>
+
+
+  <hr>
+
+
+
+  <!-- CONTACTO -->
+
+
+
+  <section id="contact-me">
+
+    <h2>CONECTEMOS</h2>
+    <button type="button" class=" btn-outline-secondary btn btn-link btn-lg"><a href="info.html" class="INFO"><i class="far fa-envelope"></i>  WRITE TO US</a></button>
+
+  </section>
+
+  <!-- REDES -->
+
+  <section id="bottom-container">
+
+    <br>
+    <div>
+      <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
+      <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
+      <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
+      <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
+      <p class="copyriht">© 2020 Tres Incendios Records</p>
 
     </div>
-  </div>
-  </div>
 
-
-
+  </section>
 
   <!--HIPSUM HIPSUM-->
 
