--- a/info.html
+++ b/info.html
@@ -10,7 +10,9 @@
 
 <body>
 
+
   <section id="our-info">
+      <img src="images/FOSFOROTRES.png" class="fosoforospng" alt="fosofores">
     <div>
       <h3>Escríbanos</h3>
       <form class="" action="mailto:kaunasaturdid@gmail.com" method="post" enctype="text/plain">
