--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- GOOGLE FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Source+Sans+Pro&family=Spectral:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
   <!-- BOOTSTRAP JAVASCRIPT -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -40,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#bands">Bandas y Artistas</a>
+            <a class="nav-link" href="#releases">Lanzamientos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#nosotros">Nosotros</a>
@@ -68,97 +69,118 @@
 
   </section>
 
-  <!-- BANDAS Y ARTISTAS -->
+  <!-- LANZAMIENTOS -->
+  <section id="releases">
 
-  <section id="bands" class="container-fluid">
+    <h2>LANZAMIENTOS</h2>
 
-    <img class="fosoforospng" src="images/FOSFOROTRES.png" alt="fosofores">
+    <div class="row">
 
-    <h2>BANDAS Y ARTISTAS</h2>
+      <div class=" image EP text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
+          <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Singles.jpg" alt="singles" />
+          <span class="artist-release">TRIVMVIRS</span>
+          <h4 class="release-title">Singles Vol. 1</h4>
+        </a>
+      </div>
 
-    <table>
-      <tr>
-        <td>
-          <table cellspacing="90">
-            <tr>
-              <td>
+      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
+          <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Transiberiano.jpg" alt="TRANS">
+          <span class="artist-release">SADKÓ</span>
+          <h4>Transiberiano (Транссибирский)</h4>
+        </a>
+      </div>
+
+      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/again">
+          <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Again.jpg" alt="OTRVZ" />
+          <span class="artist-release">THE_CLUSTER</span>
+          <h4 class="release-title">Again</h4>
+        </a>
+      </div>
+
+      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
+          <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Escencial.jpg" alt="scn" />
+          <span class="artist-release">SECRETISMO</span class="artist-release">
+          <h4 class="release-title">Esencial</h4>
+        </a>
+      </div>
+
+      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">
+          <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/siglo xx.jpg" alt="SXX" />
+          <span class="artist-release">DIMITRI NOVIKOV</span>
+          <h4 class="release-title">Siglo XX-20 век (Lost recordings)</h4>
+        </a>
+      </div>
+
+      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
+          <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Sombras.jpg" alt="sxm" />
+          <span class="artist-release">SOMBRAS</span>
+          <h4 class="release-title">Sombras S/T</h4>
+        </a>
+      </div>
+
+      <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
+          <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/THALASSIC.jpg" alt="THLSC" />
+          <span class="artist-release">AUDIOCANCER</span>
+          <h4 class="release-title">T H A L A S S I C</h4>
+        </a>
+      </div>
+
+      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
+          <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Blinded.jpg" alt="bln" />
+          <span class="artist-release">GOLDENROD</span>
+          <h4 class="release-title">Blinded</h4>
+        </a>
+      </div>
+
+
+    </div>
+
+
+    <!--
                 <strong>Audiocancer</strong>
-              </td>
-              <td>
                 <a href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
                   T H A L A S S I C</a></td>
-            </tr>
-            <tr>
-              <td>
+
                 <strong>The Cluster</strong>
-              </td>
-              <td>
+
                 <a href="https://tres-incendios-temporales.bandcamp.com/track/again">
                   Again</a></td>
-            </tr>
-            <tr>
-              <td>
+
                 <strong>Dimitri Novikov</strong>
-              </td>
-              <td>
+
                 <a href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">Siglo XX - 20 век (Lost recordings)</a>
-              </td>
-            </tr>
-            <tr>
-              <td>
+
                 <strong>goldenrod</strong>
-              </td>
-              <td>
+
                 <a href="https://tres-incendios-temporales.bandcamp.com/track/blinded">Blinded</a>
-              </td>
-            </tr>
-          </table>
-        </td>
 
-
-        <td>
-          <table cellspacing="7">
-            <tr>
-              <td>
                 <strong>SADKÓ</strong>
-              </td>
-              <td>
+
                 <a href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">Transiberiano (Транссибирский)</a>
-              </td>
-            </tr>
-            <tr>
-              <td>
+
                 <strong>Secretismo</strong>
-              </td>
-              <td>
+
                 <a href="https://tres-incendios-temporales.bandcamp.com/album/esencial">Esencial</a>
-              </td>
-            </tr>
-            <tr>
-              <td>
+
                 <strong>Sombras</strong>
-              </td>
-              <td>
+
                 <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Sombras S/T</a>
-              </td>
-            </tr>
-            <tr>
-              <td>
+
                 <strong>Trivmvirs</strong>
-              </td>
-              <td>
-                <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Singles Vol. 1</a>
-              </td>
-            </tr>
-          </table>
 
-        </td>
-      </tr>
+                <a href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">Singles Vol. 1</a> -->
 
-    </table>
-<hr>
+
   </section>
-
+  <hr>
   <!-- NOSOTROS -->
 
   <section id="nosotros">
@@ -198,7 +220,7 @@
   <section id="contact-me">
 
     <h2>CONECTEMOS</h2>
-    <button type="button" class=" btn-outline-secondary btn btn-link btn-lg"><a href="info.html" class="INFO"><i class="far fa-envelope"></i>  WRITE TO US </a></button>
+    <button type="button" class=" btn-outline-secondary btn btn-link btn-lg"><a href="info.html" class="INFO"><i class="far fa-envelope"></i> WRITE TO US </a></button>
 
   </section>
 
