--- a/index.html
+++ b/index.html
@@ -72,15 +72,59 @@
   <!-- LANZAMIENTOS -->
   <section id="releases">
 
-    <h2>LANZAMIENTOS</h2>
-
     <div class="row">
+
+      <div id="carousel-release" class="carousel slide" data-ride="carousel" data-interval="3333">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
+              <img class="lanzamientos-carousel img-thumbnail" src="images/ART ALBUMS/Transiberiano.jpg" alt="TRANS">
+            </a>
+          </div>
+          <div class="carousel-item">
+            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
+              <img class="lanzamientos-carousel img-thumbnail" src="images/ART ALBUMS/Escencial.jpg" alt="scn" />
+            </a>
+          </div>
+          <div class="carousel-item">
+            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
+              <img class="lanzamientos-carousel img-thumbnail" src="images/ART ALBUMS/Sombras.jpg" alt="sxm" />
+            </a>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carousel-release" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#carousel-release" role="button" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
+
+      <!-- <div id="carouselExampleSlidesOnly" class="carousel-1 carousel slide" data-ride="carousel"data-interval="3333">
+        <div class="rel-car carousel-inner"> -->
+          <!-- <div class="carousel-item active">
+            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
+              <img class="lanzamientos-carousel img-thumbnail" src="images/ART ALBUMS/Transiberiano.jpg" alt="TRANS">
+            </a>
+          </div> -->
+          <!-- <div class="carousel-item">
+            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
+              <img class="lanzamientos-carousel img-thumbnail" src="images/ART ALBUMS/Escencial.jpg" alt="scn" />
+            </a>
+          </div> -->
+          <!-- <div class="carousel-item">
+            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
+              <img class="lanzamientos-carousel img-thumbnail" src="images/ART ALBUMS/Sombras.jpg" alt="sxm" />
+            </a>
+          </div> -->
+        <!-- </div>
+      </div> -->
 
       <div class=" image EP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
           <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Singles.jpg" alt="singles" />
           <span class="artist-release">TRIVMVIRS</span>
-          <h4 class="release-title">Singles Vol. 1</h4>
+          <h4>Singles Vol. 1</h4>
         </a>
       </div>
 
@@ -96,7 +140,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/again">
           <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Again.jpg" alt="OTRVZ" />
           <span class="artist-release">THE_CLUSTER</span>
-          <h4 class="release-title">Again</h4>
+          <h4>Again</h4>
         </a>
       </div>
 
@@ -104,7 +148,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
           <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Escencial.jpg" alt="scn" />
           <span class="artist-release">SECRETISMO</span class="artist-release">
-          <h4 class="release-title">Esencial</h4>
+          <h4>Esencial</h4>
         </a>
       </div>
 
@@ -112,7 +156,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">
           <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/siglo xx.jpg" alt="SXX" />
           <span class="artist-release">DIMITRI NOVIKOV</span>
-          <h4 class="release-title">Siglo XX-20 век (Lost recordings)</h4>
+          <h4>Siglo XX-20 век (Lost recordings)</h4>
         </a>
       </div>
 
@@ -120,7 +164,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
           <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Sombras.jpg" alt="sxm" />
           <span class="artist-release">SOMBRAS</span>
-          <h4 class="release-title">Sombras S/T</h4>
+          <h4>Sombras S/T</h4>
         </a>
       </div>
 
@@ -128,7 +172,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
           <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/THALASSIC.jpg" alt="THLSC" />
           <span class="artist-release">AUDIOCANCER</span>
-          <h4 class="release-title">T H A L A S S I C</h4>
+          <h4>T H A L A S S I C</h4>
         </a>
       </div>
 
@@ -136,56 +180,42 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
           <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Blinded.jpg" alt="bln" />
           <span class="artist-release">GOLDENROD</span>
-          <h4 class="release-title">Blinded</h4>
+          <h4>Blinded</h4>
         </a>
       </div>
 
-
     </div>
+  </section>
 
 
-    <!--
+  <!--
                 <strong>Audiocancer</strong>
-                <a href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
-                  T H A L A S S I C</a></td>
+
 
                 <strong>The Cluster</strong>
 
-                <a href="https://tres-incendios-temporales.bandcamp.com/track/again">
-                  Again</a></td>
 
                 <strong>Dimitri Novikov</strong>
 
-                <a href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">Siglo XX - 20 век (Lost recordings)</a>
 
                 <strong>goldenrod</strong>
 
-                <a href="https://tres-incendios-temporales.bandcamp.com/track/blinded">Blinded</a>
 
                 <strong>SADKÓ</strong>
 
-                <a href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">Transiberiano (Транссибирский)</a>
 
                 <strong>Secretismo</strong>
 
-                <a href="https://tres-incendios-temporales.bandcamp.com/album/esencial">Esencial</a>
 
                 <strong>Sombras</strong>
 
-                <a href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">Sombras S/T</a>
 
                 <strong>Trivmvirs</strong>
 
-                <a href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">Singles Vol. 1</a> -->
 
 
-  </section>
-  <hr>
-  <!-- NOSOTROS -->
-
+  <!- NOSOTROS -->
   <section id="nosotros">
-
-    <h2>NOSOTROS</h2>
 
     <div class="us-row">
       <div>
@@ -208,18 +238,10 @@
 
   </section>
 
-
-  <hr>
-
-
-
   <!-- CONTACTO -->
-
-
 
   <section id="contact-me">
 
-    <h2>CONECTEMOS</h2>
     <button type="button" class=" btn-outline-secondary btn btn-link btn-lg"><a href="info.html" class="INFO"><i class="far fa-envelope"></i> WRITE TO US </a></button>
 
   </section>
@@ -231,10 +253,10 @@
     <br>
     <div>
 
-      <a href="https://tres-incendios-temporales.bandcamp.com/">bandcamp</a>
-      <a href="https://www.youtube.com/user/malezip/videos">youtube</a>
-      <a href="https://www.facebook.com/tresincendiosmedios/">facebook</a>
-      <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8">instagram</a>
+      <a href="https://tres-incendios-temporales.bandcamp.com/"><i class="fab fa-bandcamp"></i> bandcamp</a>
+      <a href="https://www.youtube.com/user/malezip/videos"><i class="fab fa-youtube"></i> youtube</a>
+      <a href="https://www.facebook.com/tresincendiosmedios/"><i class="fab fa-facebook"></i> facebook</a>
+      <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8"><i class="fab fa-instagram"></i> instagram</a>
       <p class="copyriht">© 2020 Tres Incendios Records</p>
 
     </div>
