4th try jpg names

--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/Transiberiano.jpg" alt="TRANS">
+              <img class="lanzamientos-carousel img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
             </a>
           </div>
           <div class="carousel-item">
             <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/Escencial.jpg" alt="scn" />
+              <img class="lanzamientos-carousel img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
             </a>
           </div>
           <div class="carousel-item">
             <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/Sombras.jpg" alt="sxm" />
+              <img class="lanzamientos-carousel img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
             </a>
           </div>
         </div>
@@ -130,7 +130,7 @@
 
       <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
-          <img class="lanzamientos img-thumbnail" src="images/Transiberiano.jpg" alt="TRANS">
+          <img class="lanzamientos img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
           <span class="artist-release">SADKÓ</span>
           <h4>Transiberiano (Транссибирский)</h4>
         </a>
@@ -138,7 +138,7 @@
 
       <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/again">
-          <img class="lanzamientos img-thumbnail" src="images/Again.jpg" alt="OTRVZ" />
+          <img class="lanzamientos img-thumbnail" src="images/AGAIN.jpg" alt="OTRVZ" />
           <span class="artist-release">THE_CLUSTER</span>
           <h4>Again</h4>
         </a>
@@ -146,7 +146,7 @@
 
       <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
-          <img class="lanzamientos img-thumbnail" src="images/Escencial.jpg" alt="scn" />
+          <img class="lanzamientos img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
           <span class="artist-release">SECRETISMO</span class="artist-release">
           <h4>Esencial</h4>
         </a>
@@ -154,7 +154,7 @@
 
       <div class="image EP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">
-          <img class="lanzamientos img-thumbnail" src="images/siglo xx.jpg" alt="SXX" />
+          <img class="lanzamientos img-thumbnail" src="images/SIGLO XX.jpg" alt="SXX" />
           <span class="artist-release">DIMITRI NOVIKOV</span>
           <h4>Siglo XX-20 век (Lost recordings)</h4>
         </a>
@@ -162,7 +162,7 @@
 
       <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
-          <img class="lanzamientos img-thumbnail" src="images/Sombras.jpg" alt="sxm" />
+          <img class="lanzamientos img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
           <span class="artist-release">SOMBRAS</span>
           <h4>Sombras S/T</h4>
         </a>
@@ -178,7 +178,7 @@
 
       <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
-          <img class="lanzamientos img-thumbnail" src="images/Blinded.jpg" alt="bln" />
+          <img class="lanzamientos img-thumbnail" src="images/BLINDED.jpg" alt="bln" />
           <span class="artist-release">GOLDENROD</span>
           <h4>Blinded</h4>
         </a>
