--- a/index.html
+++ b/index.html
@@ -28,49 +28,52 @@
 <body>
   <!-- CONTAINER 1 -->
 
-  <section id="cabeza" class="containter-fluid">
+  <section class="dark" id="cabeza">
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
-      <!-- BARRA DE NAVEGACIÓN -->
+    <div class="container-fluid">
 
-      <a class="navbar-brand" href="">TRES INCENDIOS RECORDS</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
+        <!-- BARRA DE NAVEGACIÓN -->
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#releases">Lanzamientos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#nosotros">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact-me">Conectemos</a>
-          </li>
-        </ul>
+        <a class="navbar-brand" href="">TRES INCENDIOS RECORDS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#releases">Lanzamientos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#nosotros">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact-me">Conectemos</a>
+            </li>
+          </ul>
+        </div>
+
+      </nav>
+      <!-- TÍTULO -->
+
+      <div class=" container row">
+        <div class="description col-lg-6 col-md-12">
+          <h1 class="big-heading">Producción y difusión de bandas alternativas emergentes.</h1>
+          <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
+        </div>
+
+        <div class="col-lg-6" style="padding:0;">
+          <img class="matchbox" src="images/MANOTRES.png" alt="cajadefosfores">
+        </div>
+
       </div>
 
-    </nav>
-    <!-- TÍTULO -->
-
-    <div class=" container row">
-      <div class="description col-lg-6 col-md-12">
-        <h1>Producción y difusión de bandas alternativas emergentes.</h1>
-        <br>
-        <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
-      </div>
-
-      <div class="col-lg-6" style="padding:0;">
-        <img class="matchbox" src="images/MANOTRES.png" alt="cajadefosfores">
-      </div>
     </div>
-
   </section>
 
   <!-- LANZAMIENTOS -->
-  <section id="releases">
+  <section class="light" id="releases">
 
     <div class="row">
 
@@ -100,31 +103,11 @@
         </a>
       </div>
 
-      <!-- <div id="carouselExampleSlidesOnly" class="carousel-1 carousel slide" data-ride="carousel"data-interval="3333">
-        <div class="rel-car carousel-inner"> -->
-          <!-- <div class="carousel-item active">
-            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/ART ALBUMS/Transiberiano.jpg" alt="TRANS">
-            </a>
-          </div> -->
-          <!-- <div class="carousel-item">
-            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/ART ALBUMS/Escencial.jpg" alt="scn" />
-            </a>
-          </div> -->
-          <!-- <div class="carousel-item">
-            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/ART ALBUMS/Sombras.jpg" alt="sxm" />
-            </a>
-          </div> -->
-        <!-- </div>
-      </div> -->
-
       <div class=" image EP text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
           <img class="lanzamientos img-thumbnail" src="images/Singles.jpg" alt="singles" />
           <span class="artist-release">TRIVMVIRS</span>
-          <h4>Singles Vol. 1</h4>
+          <h4 class="product-name">Singles Vol. 1</h4>
         </a>
       </div>
 
@@ -132,7 +115,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
           <img class="lanzamientos img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
           <span class="artist-release">SADKÓ</span>
-          <h4>Transiberiano (Транссибирский)</h4>
+          <h4 class="product-name">Transiberiano (Транссибирский)</h4>
         </a>
       </div>
 
@@ -140,7 +123,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/again">
           <img class="lanzamientos img-thumbnail" src="images/AGAIN.jpg" alt="OTRVZ" />
           <span class="artist-release">THE_CLUSTER</span>
-          <h4>Again</h4>
+          <h4 class="product-name">Again</h4>
         </a>
       </div>
 
@@ -148,7 +131,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
           <img class="lanzamientos img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
           <span class="artist-release">SECRETISMO</span class="artist-release">
-          <h4>Esencial</h4>
+          <h4 class="product-name">Esencial</h4>
         </a>
       </div>
 
@@ -156,7 +139,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/siglo-xx-20-lost-recordings">
           <img class="lanzamientos img-thumbnail" src="images/SIGLO XX.jpg" alt="SXX" />
           <span class="artist-release">DIMITRI NOVIKOV</span>
-          <h4>Siglo XX-20 век (Lost recordings)</h4>
+          <h4 class="product-name">Siglo XX-20 век (Lost recordings)</h4>
         </a>
       </div>
 
@@ -164,7 +147,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
           <img class="lanzamientos img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
           <span class="artist-release">SOMBRAS</span>
-          <h4>Sombras S/T</h4>
+          <h4 class="product-name">Sombras S/T</h4>
         </a>
       </div>
 
@@ -172,7 +155,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/t-h-a-l-a-s-s-i-c">
           <img class="lanzamientos img-thumbnail" src="images/THALASSIC.jpg" alt="THLSC" />
           <span class="artist-release">AUDIOCANCER</span>
-          <h4>T H A L A S S I C</h4>
+          <h4 class="product-name">T H A L A S S I C</h4>
         </a>
       </div>
 
@@ -180,7 +163,7 @@
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/blinded">
           <img class="lanzamientos img-thumbnail" src="images/BLINDED.jpg" alt="bln" />
           <span class="artist-release">GOLDENROD</span>
-          <h4>Blinded</h4>
+          <h4 class="product-name">Blinded</h4>
         </a>
       </div>
 
@@ -215,12 +198,12 @@
 
 
   <!- NOSOTROS -->
-  <section id="nosotros">
+  <section class="lighter" id="nosotros">
 
     <div class="us-row">
       <div>
         <img class="bioimg" src="https://image.flaticon.com/icons/svg/1963/1963720.svg" alt="mxr">
-        <h3>La historia</h3>
+        <h3 class="subtitle">La historia</h3>
         <p>En 2017 Niebla Páramo y Desasociado formaron <bold>T I R</bold> como primera plataforma para difundir sus proyectos musicales:
           <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
           luego.</p>
@@ -231,7 +214,7 @@
         </p>
 
         <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
-        <h3>La misión</h3>
+        <h3 class="subtitle">La misión</h3>
         <p>III Incendios como plataforma creativa multidimensional</p>
       </div>
     </div>
@@ -240,18 +223,18 @@
 
   <!-- CONTACTO -->
 
-  <section id="contact-me">
-
-    <button type="button" class=" btn-outline-secondary btn btn-link btn-lg"><a href="info.html" class="INFO"><i class="far fa-envelope"></i> WRITE TO US </a></button>
-
+  <section class="light" id="contact-me">
+    <div class="container-fluid">
+      <button type="button" class=" btn-outline-secondary btn btn-link btn-lg"><a href="info.html" class="INFO"><i class="far fa-envelope"></i> WRITE TO US </a></button>
+    </div>
   </section>
 
   <!-- REDES -->
 
-  <section id="bottom-container">
+  <footer class="dark" id="bottom-container">
 
-    <br>
-    <div>
+
+    <div class="container-fluid">
 
       <a href="https://tres-incendios-temporales.bandcamp.com/"><i class="fab fa-bandcamp"></i> bandcamp</a>
       <a href="https://www.youtube.com/user/malezip/videos"><i class="fab fa-youtube"></i> youtube</a>
@@ -261,22 +244,20 @@
 
     </div>
 
-  </section>
+  </footer>
 
   <!--HIPSUM HIPSUM-->
 
   <!--
-  <h3>TransgrediR lo establecido en:</h3>
-  <ol>
+
+
   RADIO
     <li>Producción musical</li>
     <li>Sonido en vivo</li>
     <li>Promoción de eventos</li>
     <li>Networking</li>
     <li>Film</li>
-  </ol>
-  <hr>
-  -->
+
 
 
 
