The Cluster Everything lost

--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
     <div class="row">
 
       <div id="carousel-release" class="carousel slide" data-ride="carousel" data-interval="3333">
+
         <div class="carousel-inner">
           <div class="carousel-item active">
             <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
               <img class="lanzamientos-carousel img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
             </a>
           </div>
+
           <div class="carousel-item">
             <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
               <img class="lanzamientos-carousel img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
@@ -100,6 +102,14 @@
         </a>
         <a class="carousel-control-next" href="#carousel-release" role="button" data-slide="next">
           <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
+
+      <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
+          <img class="lanzamientos img-thumbnail" src="images/everything lost.jpg" alt="singles" />
+          <span class="artist-release">THE_CLUSTER</span>
+          <h4 class="product-name">Everything Lost</h4>
         </a>
       </div>
 
