NEW PAGES RELEASES & ARTISTS

--- a/releases.html
+++ b/releases.html
@@ -2,12 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
-
   <meta charset="utf-8">
   <link rel="icon" href="TRES LOGO.ico">
-
-  <title>III Incendios Records</title>
-  <!-- BOOTSTRAP -->
+  <title>Releases</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- MY CSS -->
   <link rel="stylesheet" href="CSS/style.css">
@@ -24,17 +21,13 @@
 
 </head>
 
-
 <body>
-  <!-- CONTAINER 1 -->
+  <section>
 
-  <section class="dark" id="cabeza">
-
-    <div class="container-fluid">
-
+    <div class="container-fluid dark">
       <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
 
-        <a class="navbar-brand" href="">TRES INCENDIOS RECORDS</a>
+        <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,81 +35,64 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#releases">Lanzamientos</a>
+              <a class="nav-link" href="releases.html">Lanzamientos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="bands.html">Bandas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#nosotros">Nosotros</a>
+              <a class="nav-link" href="index.html#nosotros">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact-me">Conectemos</a>
+              <a class="nav-link" href="info.html">Conectemos</a>
             </li>
           </ul>
         </div>
 
       </nav>
-      <!-- TÍTULO -->
-
-      <div class=" container row">
-        <div class="description col-lg-6 col-md-12">
-          <h1 class="big-heading">Producción y difusión de bandas alternativas emergentes.</h1>
-          <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
-        </div>
-
-        <div class="col-lg-6" style="padding:0;">
-          <img class="matchbox" src="images/MANOTRES.png" alt="cajadefosfores">
-        </div>
-
-      </div>
-
     </div>
+
   </section>
 
-  <!-- LANZAMIENTOS -->
   <section class="light" id="releases">
 
 
-      <div id="carousel-release" class="carousel slide" data-ride="carousel" data-interval="3333">
+    <div id="carousel-release" class="carousel slide" data-ride="carousel" data-interval="3333">
 
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/transiberiano">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
-            </a>
-          </div>
-
-          <div class="carousel-item">
-            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
-            </a>
-          </div>
-          <div class="carousel-item">
-            <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
-              <img class="lanzamientos-carousel img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
-            </a>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carousel-release" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#carousel-release" role="button" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </a>
-      </div>
-
-
-      <div class="row">
-
-        <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
-          <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
-            <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
-            <span class="artist-release">SECRETISMO</span>
-            <h4 class="product-name">Ausencia</h4>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/singles-vol-1">
+            <img class="lanzamientos-carousel img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
           </a>
         </div>
 
+        <div class="carousel-item">
+          <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
+            <img class="lanzamientos-carousel img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
+          </a>
+        </div>
+        <div class="carousel-item">
+          <a target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/sombras-s-t">
+            <img class="lanzamientos-carousel img-thumbnail" src="images/SOMBRAS.jpg" alt="sxm" />
+          </a>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carousel-release" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#carousel-release" role="button" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+    <div class="row">
+
+      <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/ausencia">
+          <img class="lanzamientos img-thumbnail" src="images/AUSENCIA.jpg" alt="AU" />
+          <span class="artist-release">SECRETISMO</span>
+          <h4 class="product-name">Ausencia</h4>
+        </a>
+      </div>
 
       <div class=" image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
         <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/everything-lost">
@@ -139,6 +115,23 @@
           <img class="lanzamientos img-thumbnail" src="images/TRANSIBERIANO.jpg" alt="TRANS">
           <span class="artist-release">SADKÓ</span>
           <h4 class="product-name">Transiberiano (Транссибирский)</h4>
+        </a>
+      </div>
+
+      <div class="image SINGLE text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/track/again">
+          <img class="lanzamientos img-thumbnail" src="images/AGAIN.jpg" alt="OTRVZ" />
+          <span class="artist-release">THE_CLUSTER</span>
+          <h4 class="product-name">Again</h4>
+        </a>
+      </div>
+
+
+      <div class="image LP text-rel col-lg-3 col-md-4 col-sm-6">
+        <a class="link-img" target="_blank" href="https://tres-incendios-temporales.bandcamp.com/album/esencial">
+          <img class="lanzamientos img-thumbnail" src="images/ESCENCIAL.jpg" alt="scn" />
+          <span class="artist-release">SECRETISMO</span class="artist-release">
+          <h4 class="product-name">Esencial</h4>
         </a>
       </div>
 
@@ -176,73 +169,10 @@
 
     </div>
 
-    <a href="releases.html"> More... </a>
   </section>
 
-  <section class="lighter" id="nosotros">
-
-    <div class="us-row">
-      <div>
-        <img class="bioimg" src="https://image.flaticon.com/icons/svg/1963/1963720.svg" alt="mxr">
-        <h3 class="subtitle">La historia</h3>
-        <p>En 2017 Niebla Páramo y Desasociado formaron <bold>T I R</bold> como primera plataforma para difundir sus proyectos musicales:
-          <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
-          luego.</p>
-        <p>
-          Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
-          en la escena Underground bogotana desde entonces, con el ánimo de apoyar las bandas locales y las
-          marcas de diseño independientes de la ciudad.
-        </p>
-
-        <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
-        <h3 class="subtitle">La misión</h3>
-        <p>III Incendios como plataforma creativa multidimensional</p>
-      </div>
-    </div>
-
-  </section>
-
-  <!-- CONTACTO -->
-
-  <section class="light" id="contact-me">
-    <div class="container-fluid">
-      <button type="button" class=" btn-outline-secondary btn btn-link btn-lg"><a href="info.html" class="INFO"><i class="far fa-envelope"></i> WRITE TO US </a></button>
-    </div>
-  </section>
-
-  <!-- REDES -->
-
-  <footer class="dark" id="bottom-container">
 
 
-    <div class="container-fluid">
-
-      <a href="https://tres-incendios-temporales.bandcamp.com/"><i class="fab fa-bandcamp"></i> bandcamp</a>
-      <a href="https://www.youtube.com/user/malezip/videos"><i class="fab fa-youtube"></i> youtube</a>
-      <a href="https://www.facebook.com/tresincendiosmedios/"><i class="fab fa-facebook"></i> facebook</a>
-      <a href="https://instagram.com/tresincendios.records?igshid=185yeficf03o8"><i class="fab fa-instagram"></i> instagram</a>
-      <p class="copyriht">© 2020 Tres Incendios Records</p>
-
-    </div>
-
-  </footer>
-
-
-
-  <!--HIPSUM HIPSUM-->
-
-  <!--
-
-
-  RADIO
-    <li>Producción musical</li>
-    <li>Sonido en vivo</li>
-    <li>Promoción de eventos</li>
-    <li>Networking</li>
-    <li>Film</li>
-
-
-
-
+</body>
 
 </html>
