--- a/info.html
+++ b/info.html
@@ -3,31 +3,78 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="icon" href="TRES LOGO.ico">
+
   <title>our info</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- MY CSS -->
   <link rel="stylesheet" href="CSS/style.css">
+  <!-- FONTAWESOME -->
+  <script src="https://kit.fontawesome.com/70d98cf736.js" crossorigin="anonymous"></script>
+  <!-- GOOGLE FONTS -->
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Source+Sans+Pro&family=Spectral:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+  <!-- BOOTSTRAP JAVASCRIPT -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </head>
 
 
 <body>
 
-  <section class="container-fluid" id="our-info">
-      <img src="images/FOSFOROTRES.png" class="fosoforospng" alt="fosofores">
+  <section>
 
-    <div>
-      <h3>Escríbanos</h3>
-      <form class="" action="mailto:kaunasaturdid@gmail.com" method="post" enctype="text/plain">
-        <label>Su nombre</label> <br>
-        <input type="text" name="Nombre" value="">
-        <br>
-        <label> Su correo electrónico</label><br>
-        <input type="email"=name="Email">
-        <br>
-        <label>Su mensaje</label><br>
-        <textarea name="Mensaje" rows="10" cols="20"></textarea>
-        <br>
-        <input type="submit">
-      </form>
+    <div class="container-fluid dark">
+      <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:0px;">
+
+        <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="releases.html">Lanzamientos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="bands.html">Bandas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#nosotros">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="info.html">Conectemos</a>
+            </li>
+          </ul>
+        </div>
+
+      </nav>
     </div>
+
+  </section>
+
+  <section class="container-fluid" id="our-info">
+
+    <img src="images/FOSFOROTRES.png" class="fosoforospng" alt="fosofores">
+
+    <form class="" action="mailto:kaunasaturdid@gmail.com" method="post" enctype="text/plain">
+
+      <label>Su nombre</label> <br>
+      <input type="text" name="Nombre" value="">
+      <br>
+      <label> Su correo electrónico</label><br>
+      <input type="email"=name="Email">
+      <br>
+      <label>Su mensaje</label><br>
+      <textarea name="Mensaje" rows="10" cols="20"></textarea>
+      <br>
+      <input type="submit">
+
+    </form>
 
   </section>
 
@@ -35,5 +82,3 @@
 </body>
 
 </html>
-
-<!-- <hr class="infohr"> -->
